[metadata]
name = deploy2ecscli
version = attr: deploy2ecscli.__version__
description = Deploy to Ecs.
url = https://github.com/cheesecomer/deploy2ecs-cli
author =  cheesecomer
author_email = cheese.comer@gmail.com
long_description = file: README.md
license = MIT

[options]
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude =
    tests*